# ogtool-demo

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/models/: content.py
app/services/: scraper.py
notebooks/: source_snippets.ipynb
notebooks/exports/blog_posts/: blog_posts.json  blog_posts.md
notebooks/exports/chapters/: ocr_response.json  output.md
notebooks/exports/company_guides/: company_guides.json  company_guides.md
notebooks/exports/interview_guides/: interview_guides.json  interview_guides.md
notebooks/exports/nilmamano/: nilmamano.json  nilmamano.md
