[project]
name = "ogtool-demo"
version = "0.1.0"
description = "OGtool demo scraper solution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "mistralai>=1.8.2",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.7.6",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
